force-app/main/default/objects/Members_Action__c/Members_Action__c.object-meta.xml
<CustomObject>
    <label>inwise Members Action</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Member Action No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Members Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>