force-app/main/default/objects/Members_Action__c/fields/Account_Token__c.field-meta.xml
<CustomField>
    <fullName>Account_Token__c</fullName>
    <formula>Campaign__r.Account__r.Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>inwise Account Token</label>
    <type>Text</type>
</CustomField>