force-app/main/default/objects/Members_Action__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Members_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>