force-app/main/default/objects/Members_Action__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Date</label>
    <type>DateTime</type>
</CustomField>