force-app/main/default/objects/Members_Action__c/fields/Is_Called_By_Button_Click__c.field-meta.xml
<CustomField>
    <fullName>Is_Called_By_Button_Click__c</fullName>
    <defaultValue>false</defaultValue>
    <description>in case of button click, do not update custom setting. This flag will be used to decide if the job called for only one campaign or by batch</description>
    <label>Called By Button Click?</label>
    <type>Checkbox</type>
</CustomField>